--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.3.1"
+		"@sveltejs/adapter-node": "^1.3.1",
+		"dotenv": "^16.3.1",
+		"svelte-image": "^0.2.9"
 	}
 }
