--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ tower-http = { version = "0.4.4", features = ["fs"] }
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-util = { version = "0.7.8", features = ["tracing", "io"] }
 serde = { version = "1.0.185", features = ["derive"] }
+serde_json = "1.0.1"
 handlebars = "4.4.0"
