--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "lynix_ca"
-version = "0.1.0"
+version = "1.2.74"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.20"
-axum-extra = "0.7.7"
-tower-http = { version = "0.4.4", features = ["fs"] }
-tokio = { version = "1.32.0", features = ["full"] }
-tokio-util = { version = "0.7.8", features = ["tracing", "io"] }
-serde = { version = "1.0.185", features = ["derive"] }
-serde_json = "1.0.1"
+actix = "0.13.1"
+actix-web = "4.4.0"
+actix-web-actors = "4.2.0"
+actix-files = "0.6.2"
+lazy_static = "1.4.0"
 tera = "1.19.1"
-chrono = "0.4"
+serde = { version = "1.0.185", features = ["derive"] }
+serde_json = "1.0.106"
+derive_more = "0.99.17"
