--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ tera = "1.19.1"
 serde = { version = "1.0.185", features = ["derive"] }
 serde_json = "1.0.106"
 derive_more = "0.99.17"
+
+# Image Processing
+image = "0.24.7"
+webp = "0.2.5"
