--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ tera = "1.19.1"
 serde = { version = "1.0.185", features = ["derive"] }
 serde_json = "1.0.106"
 derive_more = "0.99.17"
-
+actix-governor = "0.4.1"
+actix-cors = "0.6.4"
 # Image Processing
 image = "0.24.7"
 webp = "0.2.5"
